--- a/deploy/catalog_resources/catalog-source.yaml
+++ b/deploy/catalog_resources/catalog-source.yaml
@@ -11,13 +11,13 @@ items:
         - apiVersion: operators.coreos.com/v1alpha1
           kind: ClusterServiceVersion
           metadata:
-            name: activemq-artemis-operator.v0.9.1
+            name: activemq-artemis-operator.v0.10.0
             namespace: placeholder
             annotations:
               categories: "Streaming & Messaging"
               certified: "false"
               description: ActiveMQ Artemis Operator provides the ability to deploy and manage stateful ActiveMQ Artemis broker clusters
-              containerImage: quay.io/artemiscloud/activemq-artemis-operator:0.9.1
+              containerImage: quay.io/artemiscloud/activemq-artemis-operator:0.10.0
               createdAt: 2019-12-09T08:16:32Z
               capabilities: Basic Install
               repository: https://github.com/rh-messaging/activemq-artemis-operator
@@ -67,7 +67,7 @@ items:
             keywords:
               - activemqartemis
               - operator
-            version: 0.9.1
+            version: 0.10.0
             maturity: alpha
             maintainers:
               - name: Red Hat, Inc.
@@ -84,12 +84,12 @@ items:
                 mediatype: image/png
             labels:
               alm-owner-amq-broker: activemq-artemis-operator
-              operated-by: activemq-artemis-operator.v0.9.1
+              operated-by: activemq-artemis-operator.v0.10.0
             selector:
               matchLabels:
                 ActiveMQArtemis: ex-aao
                 application: ex-aao-app
-                operated-by: activemq-artemis-operator.v0.9.1
+                operated-by: activemq-artemis-operator.v0.10.0
             installModes:
               - type: OwnNamespace
                 supported: true
@@ -246,7 +246,7 @@ items:
                           serviceAccountName: activemq-artemis-operator
                           containers:
                             - name: activemq-artemis-operator
-                              image: quay.io/artemiscloud/activemq-artemis-operator:0.9.1
+                              image: quay.io/artemiscloud/activemq-artemis-operator:0.10.0
                               command:
                                 -  /home/activemq-artemis-operator/bin/entrypoint
                               imagePullPolicy: Always
@@ -577,6 +577,10 @@ items:
           channels:
             - name: alpha
               currentCSV: activemq-artemis-operator.v0.9.1
+            - name: stable-75
+              currentCSV: activemq-artemis-operator.v0.10.0-on-z
+            - name: stable-75-on-z
+              currentCSV: activemq-artemis-operator.v0.10.0
 
   - apiVersion: operators.coreos.com/v1alpha1
     kind: CatalogSource
