--- a/deploy/olm-catalog/activemq-artemis-operator/activemq-artemis.package.yaml
+++ b/deploy/olm-catalog/activemq-artemis-operator/activemq-artemis.package.yaml
@@ -2,9 +2,7 @@ packageName: activemq-artemis
 channels:
   - name: alpha
     currentCSV: activemq-artemis-operator.v0.9.1
-  - name: stable-75
-    currentCSV: activemq-artemis-operator.v0.10.0
-  - name: stable-75-on-z
+  - name: stable-7.5-on-z
     currentCSV: activemq-artemis-operator.v0.10.0-on-z
-defaultChannel: stable-75
+defaultChannel: alpha
 
