--- a/examples/artemis/artemis_cluster_persistence.yaml
+++ b/examples/artemis/artemis_cluster_persistence.yaml
@@ -4,12 +4,8 @@ metadata:
   name: artemis-broker-tls
 spec:
   deploymentPlan:
-    size: 1
+    size: 2
     image: placeholder
     persistenceEnabled: true
+    # messageMigration requires 2+ brokers
     messageMigration: true
-  acceptors:
-    - name: amqp
-      protocols: amqp
-      port: 5672
-      sslEnabled: true
