--- a/deploy/install/010_crd_artemis.yaml
+++ b/deploy/install/010_crd_artemis.yaml
@@ -887,6 +887,11 @@ spec:
                             type: array
                         type: object
                     type: object
+                  annotations:
+                    additionalProperties:
+                      type: string
+                    description: Custom annotations to be added to broker pod
+                    type: object
                   clustered:
                     description: Whether broker is clustered
                     type: boolean
