--- a/bundle/manifests/broker.amq.io_activemqartemises.yaml
+++ b/bundle/manifests/broker.amq.io_activemqartemises.yaml
@@ -34,7 +34,7 @@ spec:
             description: ActiveMQArtemisSpec defines the desired state of ActiveMQArtemis
             properties:
               acceptors:
-                description: Specifies the acceptors
+                description: Specifies the acceptor configuration
                 items:
                   properties:
                     amqpMinLargeMessageSize:
@@ -68,7 +68,7 @@ spec:
                       description: To indicate which kind of routing type to use
                       type: string
                     name:
-                      description: Name of the acceptor
+                      description: The acceptor name
                       type: string
                     needClientAuth:
                       description: Tells a client connecting to this acceptor that
@@ -453,7 +453,7 @@ spec:
                   type: string
                 type: array
               connectors:
-                description: Specifies the connectors
+                description: Specifies connectors and connector configuration
                 items:
                   properties:
                     enabledCipherSuites:
@@ -528,7 +528,7 @@ spec:
                   type: object
                 type: array
               console:
-                description: Specifies the console configurations
+                description: Specifies the console configuration
                 properties:
                   expose:
                     description: Whether or not to expose this port
@@ -547,7 +547,7 @@ spec:
                 description: Specifies the deployment plan
                 properties:
                   affinity:
-                    description: Specifies the affinity configurations
+                    description: Specifies affinity configuration
                     properties:
                       nodeAffinity:
                         description: Describes node affinity scheduling rules for
@@ -1423,15 +1423,15 @@ spec:
                     description: Whether or not to install the artemis metrics plugin
                     type: boolean
                   extraMounts:
-                    description: Specifies the extra mounts
+                    description: Specifies extra mounts
                     properties:
                       configMaps:
-                        description: Specifies the ConfigMap names
+                        description: Specifies ConfigMap names
                         items:
                           type: string
                         type: array
                       secrets:
-                        description: Specifies the Secret names
+                        description: Specifies Secret names
                         items:
                           type: string
                         type: array
@@ -1455,7 +1455,7 @@ spec:
                       and `application` are not allowed
                     type: object
                   livenessProbe:
-                    description: Specifies the liveness probe configurations
+                    description: Specifies the liveness probe configuration
                     properties:
                       exec:
                         description: Exec specifies the action to take.
@@ -1872,7 +1872,7 @@ spec:
                         type: object
                     type: object
                   readinessProbe:
-                    description: Specifies the readiness probe configurations
+                    description: Specifies the readiness probe configuration
                     properties:
                       exec:
                         description: Exec specifies the action to take.
@@ -2024,8 +2024,8 @@ spec:
                       broker protocol ports
                     type: boolean
                   resources:
-                    description: Limits describes the minimum/maximum amount of compute
-                      resources required/allowed
+                    description: Specifies the minimum/maximum amount of compute resources
+                      required/allowed
                     properties:
                       limits:
                         additionalProperties:
