--- a/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
+++ b/bundle/manifests/activemq-artemis-operator.clusterserviceversion.yaml
@@ -1780,6 +1780,8 @@ spec:
                   value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.9
                 - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2270
                   value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.11
+                - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2280
+                  value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.13
                 - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2150
                   value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
                 - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2160
@@ -1800,6 +1802,8 @@ spec:
                   value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.9
                 - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2270
                   value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.11
+                - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2280
+                  value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.13
                 - name: ENABLE_WEBHOOKS
                   value: "false"
                 image: quay.io/artemiscloud/activemq-artemis-operator:1.0.7
