--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -60,6 +60,8 @@ spec:
           value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.9
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2270
           value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.11
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Init_2280
+          value: quay.io/artemiscloud/activemq-artemis-broker-init:1.0.13
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2150
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:0.2.0
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2160
@@ -80,6 +82,8 @@ spec:
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.9
         - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2270
           value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.11
+        - name: RELATED_IMAGE_ActiveMQ_Artemis_Broker_Kubernetes_2280
+          value: quay.io/artemiscloud/activemq-artemis-broker-kubernetes:1.0.13
         - name: ENABLE_WEBHOOKS
           value: "false"
         image: quay.io/artemiscloud/activemq-artemis-operator:1.0.7
